# tbbscan

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  tbbscan.sln
.deps/: actire_concurrency.Po
controller/: scan_controller.cpp  scan_controller.h
data_structure/: actire_concurrency.cpp  actire_concurrency.hpp  bloomfliter_concurrency.cpp  bloomfliter_concurrency.hpp  filter_policy.cpp  filter_policy.hpp  slice.hpp
filetypes/: pe_file_connector.hpp
flowscan/: flow_scan_controller.hpp
scan/: file_tbbscan_policy.hpp
src/: tbbscan_controller.h
task/: file_pe_controller_task.h  filebase_task.h
tbbscan/: ReadMe.txt  flow_scan_controller.hpp  stdafx.cpp  tbbscan.cpp  tbbscan.vcxproj  tbbscan.vcxproj.filters
